# SLAM-and-navigation-using-ROS

./: .~lock.Kinematics.odt#  Assumptions  Control.ino  Kinematics.odt  Motor.h  Robot.h  TODO  readme.md
Arduino/: Arduino.ino  IMU.h  Motor.h  Robot.h  ros_wrapper.h
Odometry test/Odometry_test/: Motor.h  Odometry_test.ino  Robot.h
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/rikobot_filters/: sensor_readings.h
devel/lib/arduino_interface/: imu_translator  my_teleop  odom_translator  odom_translator1  odom_translator2  pose_to_odom  teleop_to_cmd
devel/lib/pkgconfig/: arduino_interface.pc  filters.pc  kinect.pc  my_robot_name_2dnav.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  mybot_navigation.pc  openni_description.pc  rekobot_nav.pc  rikobot_arduino.pc  rikobot_filters.pc  rikobot_kinect.pc  rikobot_nav.pc  rikobot_rtab.pc  rikobot_run.pc
devel/lib/rikobot_arduino/: imu_translator  odom_translator1  odom_translator2  pose_to_odom  teleop_to_cmd
devel/lib/rikobot_filters/: our_filter  pose_to_odom  test_complementary_filter
devel/lib/rikobot_nav/: my_nav
devel/share/arduino_interface/cmake/: arduino_interfaceConfig.cmake
devel/share/filters/cmake/: filtersConfig.cmake
devel/share/kinect/cmake/: kinectConfig.cmake
devel/share/my_robot_name_2dnav/cmake/: my_robot_name_2dnavConfig.cmake
devel/share/mybot_control/cmake/: mybot_controlConfig.cmake
devel/share/mybot_description/cmake/: mybot_descriptionConfig.cmake
devel/share/mybot_gazebo/cmake/: mybot_gazeboConfig.cmake
devel/share/mybot_navigation/cmake/: mybot_navigationConfig.cmake
devel/share/openni_description/cmake/: openni_descriptionConfig.cmake
devel/share/rekobot_nav/cmake/: rekobot_navConfig.cmake
devel/share/rikobot_arduino/cmake/: rikobot_arduinoConfig.cmake
devel/share/rikobot_filters/cmake/: rikobot_filters-msg-extras.cmake  rikobot_filters-msg-paths.cmake  rikobot_filtersConfig.cmake
devel/share/rikobot_kinect/cmake/: rikobot_kinectConfig.cmake
devel/share/rikobot_nav/cmake/: rikobot_navConfig.cmake
devel/share/rikobot_rtab/cmake/: rikobot_rtabConfig.cmake
devel/share/rikobot_run/cmake/: rikobot_runConfig.cmake
devel/share/roseus/ros/rikobot_filters/: manifest.l
src/: load_mapserver.sh  run_gazebo.sh  run_mapserver.sh
src/arduino_interface/: CMakeLists.txt
src/arduino_interface/launch/: run_arduino.launch
src/arduino_interface/src/: imu.cpp  odom.cpp  odom2.cpp  teleop_to_cmdvel.cpp
src/filters/: CMakeLists.txt
src/filters/launch/: run_filters.launch
src/filters/params/: ekf_params.yaml
src/kinect/: CMakeLists.txt
src/kinect/launch/: run_kinect.launch
src/my_robot_name_2dnav/: CMakeLists.txt
src/my_robot_name_2dnav/launch/: move_base.launch
src/my_robot_name_2dnav/param/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
src/mybot_description/urdf/: macros.xacro  mybot.gazebo  mybot.xacro
src/mybot_gazebo/launch/: mybot_world.launch
src/mybot_gazebo/worlds/: emptyRoom.world  myworld.world
src/mybot_navigation/launch/: mybot_teleop.launch  mybot_teleop2.launch
src/mybot_navigation/param/: diff_drive_params.yaml
src/rekobot_nav/: CMakeLists.txt
src/rekobot_nav/maps/: map.pgm  map.yaml
src/rekobot_nav/param/: move_base_params.yaml
src/rikobot_arduino/: CMakeLists.txt  package.xml
src/rikobot_arduino/launch/: run_arduino.launch
src/rikobot_arduino/src/: imu.cpp  odom2.cpp  pose_to_odom.cpp  teleop.cpp
src/rikobot_filters/: CMakeLists.txt
src/rikobot_filters/launch/: run_filters.launch  test_filters.launch
src/rikobot_filters/msg/: sensor_readings.msg
src/rikobot_filters/params/: ekf_params.yaml
src/rikobot_filters/src/: complementary_filter.h  kalman_filter.h  my_lib.cpp  my_lib.h  our_filter.cpp  test_complementary_filter.cpp
src/rikobot_kinect/: CMakeLists.txt  package.xml
src/rikobot_kinect/launch/: run_kinect.launch  run_kinect2.launch
src/rikobot_nav/: CMakeLists.txt  package.xml
src/rikobot_nav/include/: costmap.h  geometry.h  global_planners.h  local_planners.h  my_types.h  tf_wrapper.h
src/rikobot_nav/launch/: costmaps.launch  map.pgm  map.yaml  move_base.launch  run_my_nav.launch
src/rikobot_nav/maps/: map.pgm  map.yaml  mymap.pgm  mymap.yaml
src/rikobot_nav/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dummy.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  my_common_costmap_params.yaml  my_global_costmap_params.yaml  my_local_costmap_params.yaml
src/rikobot_nav/src/: navigation.cpp
src/rikobot_rtab/: CMakeLists.txt
src/rikobot_rtab/launch/: demo.launch  run_rtabmap.launch  run_rtabmap2.launch  run_rtabmap_old.launch
src/rikobot_rtab/rviz/: my_conf.rviz
src/rikobot_run/: CMakeLists.txt
src/rikobot_run/launch/: run.launch
src/rikobot_run/rviz/: config.rviz
(+9 files in other folders)
